# FLIP_BDMS_SI

./: .codecov.yml  .env.development  .env.development.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  DEBUG.md  Makefile  NOTICE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  check_local_status.py  claude_plan.md  codecov.yml  consolidate_deps.py  pyproject.toml  recommended_extensions.vsix
deploy/providers/AWS/: .gitignore  CLAUDE.md  EMAIL_TESTING_CHECKLIST.md  EMAIL_TESTING_GUIDE.md  MIGRATE_TO_CLOUDFRONT.md  MIGRATION_SSH_TO_SSM.md  Makefile  README.md  REFACTORING.md  TROUBLESHOOTING.md  backend.tf  certificate.tf  check_status.py  cloudfront.tf  create_backend.sh  dhcp.tf  docker-compose.dev.yml  ecs.tf  efs.tf  iam_ecs.tf  locals.tf  main.tf  main.tf.backup  outputs.tf  package-lock.json  parameter_store.tf  pyproject.toml  requirements.yml  service_discovery.tf  services.tf  site.yml  test_email_templates.py  test_update_ssm_ssh_config.py  test_verify_deploy_readiness.py  update_env.py  update_ssh_config.py  update_ssm_ssh_config.py  variables.tf  verify_deploy_readiness.py  vpc_endpoints.tf
deploy/providers/AWS/dev/: Makefile  README.md  backend.tf  main.tf  variables.tf
deploy/providers/AWS/docs/: AWS.excalidraw
deploy/providers/AWS/email_previews/: flip_email_invite.html  flip_email_password_reset_code.html  flip_email_password_reset_link.html
deploy/providers/AWS/email_templates/: invite.html  password_reset_code.html  password_reset_link.html
deploy/providers/AWS/scripts/: backup-eips.sh  create-backend.sh  destroy-preserve-eips.sh  destroy-selective.sh  force-unlock.sh  forward-trust-all.sh  import-resources.sh  manage-aws.sh  manage-secrets.sh  utils.sh
deploy/providers/AWS/templates/: cloudwatch-agent-trust.json.j2  cloudwatch-agent.json.j2
docs/: .gitignore  .python-version  CLAUDE.md  Makefile  README.md  env-validation-precommit.md  hybrid-local-trust-https-plan.md  pyproject.toml
docs/source/: 1_overview.rst  2_components.rst  2_requirements.rst  3_guides.rst  3_requirements.rst  3_sys-admin.rst  4_documentation.rst  4_user-guides.rst  5_api_reference.rst  5_contributors.rst  5_documentation.rst  6_faqs.rst  7_glossary.rst  conf.py  index.rst
docs/source/_static/: style.css
docs/source/_templates/: custom-module-template.rst  layout.html
docs/source/assets/tre/: TRE_FLIP_diagram.excalidraw
docs/source/autoapi/: index.rst
docs/source/components/: component-ch-api.rst  component-fl-nodes.rst  component-imaging-db.rst  component-omop-database.rst  component-omop.rst  component-user-roles.rst  component-xnat.rst
docs/source/deployment-requirements/: aic-provided-environment.rst  omop.rst  pacs.rst
docs/source/developer/: contributing.rst  releases.rst  style.rst
docs/source/guides/: platform_admin.rst  trust_admin.rst  user.rst
docs/source/sys-admin/: admin-logging.rst  admin-platform-support.rst  admin-project-and-user-management.rst  admin-tre-deployment.rst
docs/source/user-guides/: user-common.rst  user-flower-walkthrough.rst
docs/template/: rst_doc_template.rst
flip-api/: .eslintrc.js  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  database.db  entrypoint.sh  pyproject.toml  wait-for-postgres.sh
flip-api/dev_utils/: find_duplications.py  ollama_translate.py
flip-api/src/flip_api/: config.py  main.py
flip-api/src/flip_api/assets/: job_types_and_required_files.json
flip-api/src/flip_api/auth/: access_manager.py  auth_utils.py  dependencies.py
flip-api/src/flip_api/cohort_services/: get_cohort_query_results.py  save_cohort_query.py  submit_cohort_query.py
flip-api/src/flip_api/db/: database.py
flip-api/src/flip_api/file_services/: delete_file.py  download_file.py  get_model_files_list.py  presigned_url_for_upload.py  retrieve_federated_results.py  retrieve_model_files_list.py  retrieve_uploaded_file_info.py  uploaded_file.py
flip-api/src/flip_api/fl_services/: get_net_status.py  get_status.py  (+3 more)
flip-api/tests/: conftest.py  debug_post_debug_task.py  debug_prelaunch_task.py  e2e_smoke.py  example_query.sql  query_result_data.json  query_stats.json
flip-api/tests/fixtures/: db_fixtures.py  main_fixtures.py  model_fixtures.py  project_fixture.py  user_fixtures.py
flip-api/tests/integration/: conftest.py  test_auth_permissions_db_flow.py  test_aws_mock_smoke.py  test_cognito_round_trips.py  test_cohort_save_db_flow.py  test_get_model_files_list.py  test_model_db_flow.py  test_presigned_url_for_uploads.py  test_project_db_flow.py  test_receive_cohort_results.py  test_retrieve_model_files_list.py  test_retrieve_uploaded_file_info.py  test_role_db_flow.py  test_s3_round_trips.py  test_ses_round_trips.py  test_set_user_roles.py  test_user_db_flow.py  test_user_registration_real_api.py  utils.py
flip-api/tests/step_functions_services/: test_approve_project_step_function.py  test_cohort_query_step_function.py  test_register_user_step_function.py  test_retrieve_model_step_function.py
flip-api/tests/unit/: _log_policy.py  test_main.py
trust/data-access-api/: .dockerignore  .env  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
trust/data-access-api/data_access_api/: __init__.py  config.py  main.py
trust/data-access-api/tests/: conftest.py  test_main.py
trust/imaging-api/: .dockerignore  .env  .gitignore  .python-version  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
trust/imaging-api/imaging_api/: __init__.py  config.py  main.py
trust/imaging-api/tests/: conftest.py  test_main.py
trust/trust-api/: .env  .gitignore  .python-version  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
trust/trust-api/tests/: conftest.py  test_main.py
trust/trust-api/trust_api/: __init__.py  config.py  main.py
trust/xnat/tests/: Makefile  README.md  anon_engine.py  conftest.py  pyproject.toml  test_anon_engine_negative.py  test_anon_script_phi.py  test_anon_script_static.py
(+856 files in other folders)
