# Copyright (c) Guy's and St Thomas' NHS Foundation Trust & King's College London
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#


[project]
name = "flip-dev"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "R. Garcia-Dias", email = "rafaelagd@gmail.com" },
    { name = "A. Triay Bagur", email = "alexandre.triay_bagur@kcl.ac.uk" },
    { name = "V. Fernandez", email = "virginia.fernandez@kcl.ac.uk" },
]
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "boto3-stubs>=1.37.22",
    "boto3>=1.34.49",
    "cryptography>=45.0.4",
    "data-access-api",
    "fastapi[standard]>=0.115.12",
    "flip-api",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "imaging-api",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.6.1",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.9",
    "readthedocs-sphinx-search>=0.3.2",
    "setuptools>=80.8.0",
    "sphinx-autoapi>=3.6.0",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-bibtex>=2.6.3",
    "sqlalchemy>=2.0.39",
    "sqlglot>=26.33.0",
    "sqlmodel>=0.0.24",
    "sqlparse>=0.5.3",
    "trust-api",
    "types-python-jose>=3.4.0.20250224",
    "types-requests>=2.32.0.20250328",
    "uvicorn>=0.34.0",
    "xnat>=0.7.0",
]

[tool.uv.sources]
flip-api = { path = "flip-api", editable = true }
trust-api = { path = "trust/trust-api", editable = true }
imaging-api = { path = "trust/imaging-api", editable = true }
data-access-api = { path = "trust/data-access-api", editable = true }

[project.scripts]
flip-dev = "flip_dev:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
omit = ["*.venv/*", "*/tests/*", "*/__init__.py", "*/translation/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
addopts = ["--import-mode=importlib"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PT']
exclude = [
    "src/flip_api/translation/*"
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "src/flip_api/translation/*",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "coverage>=7.7.1",
    "debugpy>=1.8.15",
    "factory-boy>=3.3.3",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "libcst>=1.7.0",
    "mypy>=1.15.0",
    "ollama>=0.4.8",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.1.0",
    "pytest-factoryboy>=2.7.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "ruff>=0.11.4",
    "thefuzz>=0.22.1",
    "types-requests>=2.32.0.20250328",
]
