# Copyright (c) 2026 Guy's and St Thomas' NHS Foundation Trust & King's College London
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[project]
name = "docs"
version = "0.1.0"
description = "Documentation for the FLIP project"
readme = "README.md"
authors = [
    { name = "R. Garcia-Dias", email = "rafaelagd@gmail.com" },
    { name = "A. Triay Bagur", email = "alexandre.triay_bagur@kcl.ac.uk" },
]
requires-python = ">=3.10"
dependencies = [
    "readthedocs-sphinx-search>=0.3.2",
    "requests>=2.33.0",
    "setuptools>=80.8.0",
    "sphinx-autoapi>=3.6.0",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-bibtex>=2.6.3",
    "urllib3>=2.6.0",
]

[project.scripts]
docs = "docs:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
