# Copyright (c) 2026 Guy's and St Thomas' NHS Foundation Trust & King's College London
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[project]
name = "data-access-api"
version = "0.1.0"
description = "flip Trust Data Access API"
readme = "README.md"
authors = [
    { name = "A. Triay Bagur", email = "alexandre.triay_bagur@kcl.ac.uk" },
]
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi[standard]>=0.115.11",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.39",
    "sqlglot>=26.33.0",
    "starlette>=0.49.1",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.15",
    "mypy>=1.15.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.1.0",
    "ruff>=0.11.4",
]

[tool.pytest.ini_options]
pythonpath = ["data_access_api", "../observability"]
python_files = ["test_*.py", "*_test.py"]
addopts = []
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]


[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
omit = ["*.venv/*", "*/tests/*", "*/__init__.py"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PT', 'UP006', 'UP007', 'UP035', 'UP045']
