# Copyright (c) Guy's and St Thomas' NHS Foundation Trust & King's College London
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[project]
name = "imaging-api"
version = "0.1.0"
description = "flip Trust Imaging API"
readme = "README.md"
authors = [
    { name = "A. Triay Bagur", email = "alexandre.triay_bagur@kcl.ac.uk" },
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "cryptography>=45.0.4",
    "fastapi[standard]>=0.115.11",
    "greenlet>=3.1.1",
    "pandas>=2.2.3",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.39",
    "types-requests>=2.32.0.20250328",
    "uvicorn>=0.34.0",
    "xnat>=0.7.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.15",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.4",
]

[tool.pytest.ini_options]
pythonpath = "imaging_api"
python_files = ["test_*.py", "*_test.py"]
addopts = []
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
omit = ["*.venv/*", "*/tests/*", "*/__init__.py"]

[tool.pytest.ini_options_debug]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PT']
