# Copyright (c) 2026 Guy's and St Thomas' NHS Foundation Trust & King's College London
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[project]
name = "xnat-anon-tests"
version = "0.1.0"
description = "Tests for the XNAT site-wide DICOM anonymization script"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydicom>=2.4.5",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=9.0.3",
    "ruff>=0.11.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = ["-ra"]
filterwarnings = ["ignore::DeprecationWarning:pydicom"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PT"]
